@@ -26,6 +26,8 @@ v7.0.0:
       columns
     - list of optional columns (as configured in Preferences) is now used at
       application startup only (renamed to 'initial optional fields')
+  - Calendar View and Overview Diagram: bugfix for weeknumber calculation
+
  Translations:
   - added korean translation provided by Tae Young Ko <oscetic@gmail.com>
 
